crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__trait___tests__constrained_method_does_not_imply_superclass.snap
---
source: crates/nash-parse/src/declaration/trait_.rs
assertion_line: 343
description: "trait Show 'a where\n    show : Eq 'a => 'a -> string\n"
---
Trait(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 33,
            },
        },
        value: Trait {
            docs: None,
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 11,
                    },
                },
                value: "Show",
            },
            params: [
                TypeParam {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 12,
                            },
                            end: Position {
                                line: 1,
                                column: 14,
                            },
                        },
                        value: "a",
                    },
                    repr: None,
                },
            ],
            supers: [],
            methods: [
                TraitMethod {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 9,
                            },
                        },
                        value: "show",
                    },
                    annotation: Annotation {
                        constraints: [
                            Located {
                                region: Region {
                                    start: Position {
                                        line: 2,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 2,
                                        column: 17,
                                    },
                                },
                                value: Constraint {
                                    class: Located {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 12,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 14,
                                            },
                                        },
                                        value: "Eq",
                                    },
                                    module: None,
                                    args: [
                                        Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 15,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 17,
                                                },
                                            },
                                            value: Var(
                                                "a",
                                            ),
                                        },
                                    ],
                                },
                            },
                        ],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 21,
                                },
                                end: Position {
                                    line: 2,
                                    column: 33,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 21,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 23,
                                        },
                                    },
                                    value: Var(
                                        "a",
                                    ),
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 27,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 33,
                                        },
                                    },
                                    value: Type {
                                        region: Region {
                                            start: Position {
                                                line: 2,
                                                column: 27,
                                            },
                                            end: Position {
                                                line: 2,
                                                column: 33,
                                            },
                                        },
                                        name: "string",
                                        args: [],
                                    },
                                },
                            },
                        },
                    },
                    default: None,
                },
            ],
            attributes: [],
        },
    },
)
