crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__trait___tests__superclass_argument_must_be_variable.snap
---
source: crates/nash-parse/src/declaration/trait_.rs
description: "trait Eq int => Ord 'a where"
---
Trait(
    SuperArg(
        1,
        10,
    ),
    1,
    1,
)
