crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__trait___tests__trait_requires_parameter.snap
---
source: crates/nash-parse/src/declaration/trait_.rs
description: trait Eq where
---
Trait(
    Param(
        Start(
            1,
            10,
        ),
        1,
        10,
    ),
    1,
    1,
)
