crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__trait___tests__trait_requires_uppercase_name.snap
---
source: crates/nash-parse/src/declaration/trait_.rs
description: "trait eq 'a where"
---
Trait(
    Name(
        1,
        7,
    ),
    1,
    1,
)
