crates/nash-parse/src/declaration/snapshots/nash_parse__declaration__trait___tests__trait_with_higher_kinded_parameter.snap
---
source: crates/nash-parse/src/declaration/trait_.rs
assertion_line: 266
description: "trait Functor 'f where\n    map : ('a -> 'b) -> 'f 'a -> 'f 'b\n"
---
Trait(
    Located {
        region: Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 2,
                column: 39,
            },
        },
        value: Trait {
            docs: None,
            name: Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 14,
                    },
                },
                value: "Functor",
            },
            params: [
                TypeParam {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 15,
                            },
                            end: Position {
                                line: 1,
                                column: 17,
                            },
                        },
                        value: "f",
                    },
                    repr: None,
                },
            ],
            supers: [],
            methods: [
                TraitMethod {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 5,
                            },
                            end: Position {
                                line: 2,
                                column: 8,
                            },
                        },
                        value: "map",
                    },
                    annotation: Annotation {
                        constraints: [],
                        typ: Located {
                            region: Region {
                                start: Position {
                                    line: 2,
                                    column: 11,
                                },
                                end: Position {
                                    line: 2,
                                    column: 39,
                                },
                            },
                            value: Lambda {
                                from: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 12,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 20,
                                        },
                                    },
                                    value: Lambda {
                                        from: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 12,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 14,
                                                },
                                            },
                                            value: Var(
                                                "a",
                                            ),
                                        },
                                        to: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 18,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 20,
                                                },
                                            },
                                            value: Var(
                                                "b",
                                            ),
                                        },
                                    },
                                },
                                to: Located {
                                    region: Region {
                                        start: Position {
                                            line: 2,
                                            column: 25,
                                        },
                                        end: Position {
                                            line: 2,
                                            column: 39,
                                        },
                                    },
                                    value: Lambda {
                                        from: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 25,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 30,
                                                },
                                            },
                                            value: VarApp {
                                                region: Region {
                                                    start: Position {
                                                        line: 2,
                                                        column: 25,
                                                    },
                                                    end: Position {
                                                        line: 2,
                                                        column: 27,
                                                    },
                                                },
                                                name: "f",
                                                args: [
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 2,
                                                                column: 28,
                                                            },
                                                            end: Position {
                                                                line: 2,
                                                                column: 30,
                                                            },
                                                        },
                                                        value: Var(
                                                            "a",
                                                        ),
                                                    },
                                                ],
                                            },
                                        },
                                        to: Located {
                                            region: Region {
                                                start: Position {
                                                    line: 2,
                                                    column: 34,
                                                },
                                                end: Position {
                                                    line: 2,
                                                    column: 39,
                                                },
                                            },
                                            value: VarApp {
                                                region: Region {
                                                    start: Position {
                                                        line: 2,
                                                        column: 34,
                                                    },
                                                    end: Position {
                                                        line: 2,
                                                        column: 36,
                                                    },
                                                },
                                                name: "f",
                                                args: [
                                                    Located {
                                                        region: Region {
                                                            start: Position {
                                                                line: 2,
                                                                column: 37,
                                                            },
                                                            end: Position {
                                                                line: 2,
                                                                column: 39,
                                                            },
                                                        },
                                                        value: Var(
                                                            "b",
                                                        ),
                                                    },
                                                ],
                                            },
                                        },
                                    },
                                },
                            },
                        },
                    },
                    default: None,
                },
            ],
            attributes: [],
        },
    },
)
